# pib-audio

./: requirements.lock.txt  requirements.txt
src/datatypes/: CMakeLists.txt
src/datatypes/action/: Listen.action
src/datatypes/msg/: VoiceEvent.msg  VoiceTask.msg
src/voice_assistant/: Dockerfile  package.xml  setup.py
src/voice_assistant/launch/: demo_doorbell_bag.launch.py  demo_doorbell_wav.launch.py  demo_listen_action_speech.launch.py
src/voice_assistant/voice_assistant/: demo_doorbell_detector.py  doorbell_task_manager_demo.py  doorbell_wav_detector.py  listen_action_server.py  speech_task_manager_demo.py  voice_rule_engine.py  voice_task_dispatcher.py  whisper_speech_transcriber.py  yamnet_doorbell_classifier.py
voice_assistant/: setup.py
voice_assistant/launch/: demo_listen_action_doorbell.launch.py
voice_assistant/voice_assistant/: doorbell_audio_stream_detector.py  doorbell_task_manager_demo.py  listen_action_server.py
